--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <div class="bg-top">
-      <svg width="978" height="978" xmlns="http://www.w3.org/2000/svg">
+    <div class="bg">
+      <svg
+        class="bg-top"
+        width="978"
+        height="978"
+        xmlns="http://www.w3.org/2000/svg"
+      >
         <defs>
           <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a">
             <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
@@ -87,8 +92,13 @@
         </div>
       </div>
     </main>
-    <div class="bg-bottom">
-      <svg width="978" height="978" xmlns="http://www.w3.org/2000/svg">
+    <div class="bg">
+      <svg
+        class="bg-bottom"
+        width="978"
+        height="978"
+        xmlns="http://www.w3.org/2000/svg"
+      >
         <defs>
           <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a">
             <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
