--- a/index.html
+++ b/index.html
@@ -21,101 +21,55 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <div class="bg">
-      <svg
-        class="bg-top"
-        width="978"
-        height="978"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <defs>
-          <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a">
-            <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
-            <stop stop-color="#53FFEE" offset="99.94%" />
-          </linearGradient>
-        </defs>
-        <ellipse
-          fill="url(#a)"
-          transform="rotate(-135 489 489)"
-          cx="489"
-          cy="489"
-          rx="489"
-          ry="488"
-          fill-rule="evenodd"
-          opacity=".5"
-        />
-      </svg>
-    </div>
+    <div class="bg-pattern-top"></div>
+    <div class="bg-pattern-bottom"></div>
     <main>
       <div class="card-container">
-        <div class="card-banner">
-          <img
-            class="img-banner"
-            src="./images/bg-pattern-card.svg"
-            alt="banner"
-          />
-        </div>
-        <div class="user-image">
-          <img
-            class="img-avatar"
-            src="./images/image-victor.jpg"
-            alt="user profile pic"
-          />
-        </div>
-        <div class="user-info">
-          <h1 class="user-name">
-            Victor Crest <span class="user-age">26</span>
-          </h1>
-          <h2 class="user-location">London</h2>
-        </div>
-        <div class="stats">
-          <ul class="user-stats">
-            <li class="stats-followers">
-              <ul>
-                <li class="stats-count">80K</li>
-                <li class="stats-label">Followers</li>
-              </ul>
-            </li>
-            <li class="stats-likes">
-              <ul>
-                <li class="stats-count">803K</li>
-                <li class="stats-label">Likes</li>
-              </ul>
-            </li>
-            <li class="stats-photos">
-              <ul>
-                <li class="stats-count">1.4K</li>
-                <li class="stats-label">Photos</li>
-              </ul>
-            </li>
-          </ul>
+        <div class="card">
+          <div class="card-banner">
+            <img
+              class="img-banner"
+              src="./images/bg-pattern-card.svg"
+              alt="banner"
+            />
+          </div>
+          <div class="user-image">
+            <img
+              class="img-avatar"
+              src="./images/image-victor.jpg"
+              alt="user profile pic"
+            />
+          </div>
+          <div class="user-info">
+            <h1 class="user-name">
+              Victor Crest <span class="user-age">26</span>
+            </h1>
+            <h2 class="user-location">London</h2>
+          </div>
+          <div class="stats">
+            <ul class="user-stats">
+              <li class="stats-followers">
+                <ul>
+                  <li class="stats-count">80K</li>
+                  <li class="stats-label">Followers</li>
+                </ul>
+              </li>
+              <li class="stats-likes">
+                <ul>
+                  <li class="stats-count">803K</li>
+                  <li class="stats-label">Likes</li>
+                </ul>
+              </li>
+              <li class="stats-photos">
+                <ul>
+                  <li class="stats-count">1.4K</li>
+                  <li class="stats-label">Photos</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
-    <div class="bg">
-      <svg
-        class="bg-bottom"
-        width="978"
-        height="978"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <defs>
-          <linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a">
-            <stop stop-color="#0989B4" stop-opacity="0" offset="0%" />
-            <stop stop-color="#53FFEE" offset="99.94%" />
-          </linearGradient>
-        </defs>
-        <ellipse
-          fill="url(#a)"
-          transform="scale(1 -1) rotate(45 1669.55 0)"
-          cx="489"
-          cy="489"
-          rx="489"
-          ry="488"
-          fill-rule="evenodd"
-          opacity=".25"
-        />
-      </svg>
-    </div>
   </body>
 </html>
