--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
       <div class="card-container">
         <div class="card">
           <div class="card-banner">
-            <img
-              class="img-banner"
-              src="./images/bg-pattern-card.svg"
-              alt="banner"
-            />
+            <img class="img-banner" src="./images/pattern.svg" alt="banner" />
           </div>
           <div class="user-image">
             <img
